[refs #279] added css to fix carousel on mobile and polling to 600

--- a/site/ballando/assets/stylesheets/ballando_jcarousel_responsive.css
+++ b/site/ballando/assets/stylesheets/ballando_jcarousel_responsive.css
@@ -98,6 +98,18 @@
     box-shadow: 0 0 2px #4E443C;
 }
 
+@media(max-width: 1024px){
+	.jcarousel{
+		width: 1004px;
+	}
+}
+
+@media(max-width: 768px){
+	.jcarousel{
+		width: 748px;
+	}
+}
+
 @media(max-width: 768px){
 	.jcarousel{
 		width: 748px;
